force-app/main/default/objects/Customer_Support__c/Customer_Support__c.object-meta.xml
<CustomObject>
    <label>Customer Support</label>
    <nameField>
        <label>Customer Support Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>30</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>