force-app/main/default/objects/Customer_Support__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <label>Assigned Team</label>
    <length>30</length>
    <type>Text</type>
</CustomField>